compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__update_multi_variant_record.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Point {\n  Point2(a: Int, b: Int)\n  Point3(a: Int, b: Int, c: Int)\n}\n\npub fn main() {\n  Point3(..Point2(a: 1, b: 2))\n}"
---
----- SOURCE CODE

pub type Point {
  Point2(a: Int, b: Int)
  Point3(a: Int, b: Int, c: Int)
}

pub fn main() {
  Point3(..Point2(a: 1, b: 2))
}

----- ERROR
error: Mismatched record update
  ┌─ /src/one/two.gleam:8:3
  │
8 │   Point3(..Point2(a: 1, b: 2))
  │   ^^^^^^ This is never the right constructor

This value is never the same constructor as the one being updated.

If you want to change one variant of a type into another, each field of the
new type must be specified explicitly.
